--- a/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercises/5_4/style.css
+++ b/fundamentos/bloco-5-javascript-dom-eventos-e-web-storage/dia-4-javascript-web-storage/exercises/5_4/style.css
@@ -4,32 +4,14 @@ body {
 }
 .article {
     margin: 15%;
-    margin-top: 0%;
-    margin-bottom: 0%;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
-#input-background-color {
-    
-}
-
-#input-text-color {
+#cabecalho {
 
 }
 
+#rodape {
 
-
-h1 {
-    font-size: 32px;
-}
-
-h2 {
-    font-size: 24px;
-}
-
-h3 {
-    font-size: 20px;
-}
-
-p {
-    font-size: 16px;
 }
