--- a/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
+++ b/fundamentos/bloco-6-html-e-css-forms-flexbox-e-responsivo/dia-5-css-responsivo-mobile-first/style.css
@@ -65,3 +65,30 @@ body {
   .card:nth-of-type(3) {
     background-color: #41197f;
   }
+
+  @media screen and (min-width: 500px) {
+    .card:nth-child(1) {
+        background-color: #0fa36b;
+        display: inline;
+    } 
+  }
+
+  @media screen and (min-width: 600px) and (max-width: 1000px) {
+    .card:nth-child(2) {
+        background-color: #0255c2;
+        display: inline;
+    } 
+  }
+
+  @media screen and (max-width: 650px) , (min-width: 950px) {
+    .card:nth-child(3) {
+        background-color: #41197f;
+        display: inline;
+    } 
+  }
+
+  @media screen and (max-width: 500px) {
+    p.trick {
+        color: #525252;
+    }
+  }
